# ifcb-flow-microservice

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
flow_metric_service/: bin_store.py  main.py  processor.py
